--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Weather Checker</title>
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="stylesheet" href="./out/css/screen.css">
   </head>
   <body>
     <h1>Hello, World!</h1>
-    <script src="/main.js" charset="utf-8"></script>
+    <script src="./src/js/main.js" charset="utf-8"></script>
   </body>
 </html>
