Added html content

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Weather Checker</title>
-    <link rel="stylesheet" href="./out/css/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-    <script src="./src/js/main.js" charset="utf-8"></script>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Weather Checker</title>
+  <link rel="stylesheet" href="./out/css/screen.css">
+</head>
+
+<body>
+  <header class="hero">
+    <h1 class="titleHeader">Weather Checker</h1>
+  </header>
+
+  <section class="centerContainer">
+    <section id="inputContainer" class="input-container">
+      <input type="text" id="searchBar">
+      <button id="searchButton">Search</button>
+    </section>
+
+    <section id="dataLog" class="data-log">
+      <!-- Data here -->
+    </section>
+  </section>
+
+  <footer class="footer">
+    <!-- TODO: Add footer content -->
+  </footer>
+
+  <script src="./src/js/main.js" charset="utf-8"></script>
+</body>
+
 </html>
