--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="html">
 
 <head lang="en">
   <meta charset="UTF-8">
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="./out/css/screen.css">
 </head>
 
-<body>
+<body class="body">
   <header class="hero">
     <h1 class="titleHeader">Weather Checker</h1>
   </header>
 
-  <section class="centerContainer">
+  <section class="center-container">
     <section id="inputContainer" class="input-container">
       <input type="text" id="searchBar">
       <button id="searchButton">Search</button>
