All the way up to the api call

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <section class="center-container">
     <section id="inputContainer" class="input-container">
       <input type="text" id="searchBar">
-      <button id="searchButton">Search</button>
+      <button type="button" id="searchButton">Search</button>
     </section>
 
     <section id="dataLog" class="data-log">
